Login realizado - problema na autorização

--- a/PersonApi/appsettings.json
+++ b/PersonApi/appsettings.json
@@ -2,6 +2,11 @@
   "MySqlConnection": {
     "MySqlConnectionString": "Server=172.21.0.2;Port=3306;Database=rest_dotnetcore;Uid=root;Pwd=root;SslMode=none;"
   },
+  "TokenConfiguration": {
+    "Audience": "ExempleAudience",
+    "Issuer": "ExempleIssuer",
+    "Seconds": 1200
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
